tests/parsing/unknown_call_func_name/stderr.golden
error: unknown function 'foo'
bus.fbd +2:21
   |
 2 |   c config; width = foo()
   |                     ^^^
